# bunnyland-plugin-petsim

./: README.md
.github/workflows/: ci.yml
server/: README.md  pyproject.toml
server/src/bunnyland_petsim/: __init__.py  affect.py  bonding.py  commands.py  components.py  edges.py  enrichment.py  events.py  following.py  fragments.py  incidents.py  install.py  knowledge.py  mounts.py  petcare.py  plugin.py  prefabs.py  spatial.py  taming.py  tracking.py  training.py  tricks.py  worldgen.py
server/tests/: test_bonding.py  test_enrichment.py  test_following.py  test_fragments.py  test_mounts.py  test_plugin.py  test_taming.py  test_tricks.py  test_v2.py  test_v2b.py  test_v2c.py  test_v2d.py
